--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -60,7 +60,7 @@ page-welcome {
   left: 0;
   z-index: 100000;
   width:100%;
-  background-color: rgba(163,73,164,0.5);
+  background-color: gray;
 }
 
 .appBody{
