--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,13 +28,26 @@ $font-family-wp-base: "Lucida Console", Monaco, monospace;
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
+
+//colores por default
+// $colors: (
+//   primary:    #488aff,
+//   secondary:  #32db64,
+//   danger:     #f53d3d,
+//   light:      #f4f4f4,
+//   dark:       #222
+// );
+
+//colores para team-5 por DV
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:    #4d535e,
+  secondary:  #758379,
+  danger:     #743b3b,
+  light:      #d1bfbf,
+  dark:       rgb(43, 40, 40)
 );
+
+
 
 
 // App iOS Variables
