--- a/src/pages/pages-dueno/pages-dueno.scss
+++ b/src/pages/pages-dueno/pages-dueno.scss
@@ -53,8 +53,10 @@ page-pages-dueno {
             margin: auto;
             background: url('../assets/img/appicon.png') repeat transparent;
             background-size: 100%;
-            width: 300px;
-            height: 300px;
+            /*width: 300px;
+            height: 300px;*/
+            width: 150px;
+            height: 150px;
         }
     
         .info {
