Arreglos generales, interface de form producto creada

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,3 +25,13 @@
 .alert-md .alert-button {
     color: black !important;
 }
+
+.toolbar-background-md {
+    border-color: #b2b2b2;
+    background: transparent;
+}
+
+.formItem {
+    background-color: rgba(0,0,0,0.5) !important; 
+    color: white; border-radius: 10px;
+}
