--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,9 +17,14 @@
 
 
 .alert-wrapper{
-    background-color: rgba(209, 152, 209, 0.8) !important;
+    background-color: rgba(223, 223, 223, 0.8) !important;
     border-radius: 20px !important;
     box-shadow: 10px 10px 10px black !important;
+}
+
+.alert-md .alert-message {
+    color:rgba(255, 255, 255, 0.76);
+    font-size: 25px;
 }
 
 .alert-md .alert-button {
