Component Mesa. Muestra QR

--- a/src/components/alta-mesa/alta-mesa.scss
+++ b/src/components/alta-mesa/alta-mesa.scss
@@ -1,5 +1,4 @@
-page-pages-supervisor {
-   
+alta-mesa {
     #custom-overlay {
         position: fixed;
         top: 0;
@@ -334,7 +333,5 @@ page-pages-supervisor {
   font-size: 20px;
   text-shadow: none;
 }
-
-
 
 }
