Se arregla/mejor la estructura de usuariso

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -49,3 +49,8 @@
     background-color: rgba(0,0,0,0.5) !important; 
     color: white; border-radius: 10px;
 }
+
+.menuButtonPPT {
+    margin-top: 2.5%;
+    margin-bottom: 2.5%;
+}
