Mejora de interface de dueño

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -54,3 +54,19 @@
     margin-top: 2.5%;
     margin-bottom: 2.5%;
 }
+
+.ion-label {
+    margin: auto !important;
+}
+
+.label-md {
+    margin: auto !important;
+}
+
+.list-md .item-block .item-inner {
+    padding: 0% !important;
+}
+
+.item-md.item-block .item-inner {
+    padding: 0% !important;
+}
