--- a/src/components/alta-empleado/alta-empleado.html
+++ b/src/components/alta-empleado/alta-empleado.html
@@ -38,7 +38,7 @@
         <ion-select class="titulo" style="color: white;" name="tipo" [formControl]="tipo" placeholder="Seleccionar">
           <ion-option value="mozo">Mozo</ion-option>
           <ion-option value="cocinero">Cocinero</ion-option>
-          <ion-option value="bartender">Bar Tender</ion-option>
+          <ion-option value="bartender">Bartender</ion-option>
           <ion-option value="delivery">Delivery</ion-option>
         </ion-select>
       </ion-item>
