Juego 10% de descuento funcionando, falta agregar logica de pedido

--- a/src/components/alta-dueno/alta-dueno.html
+++ b/src/components/alta-dueno/alta-dueno.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar class="productoNavBar">
-    <ion-title>Dueño - Alta</ion-title>
+    <ion-title>Dueño/Supervisor - Alta</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding class="productoMenu">
