--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,6 +22,17 @@
     box-shadow: 10px 10px 10px black !important;
 }
 
+.toastPedido{
+    //background-color: rgba(131, 131, 131, 1) !important;
+    border-radius: 20px !important;
+    box-shadow: 10px 10px 10px black !important;
+    .button{
+        color: whitesmoke;
+        background-color: darkslategray;
+        border: cornsilk;
+    }
+}
+
 .alert-md .alert-message {
     color:rgba(255, 255, 255, 0.76);
     font-size: 25px;
@@ -70,3 +81,4 @@
 .item-md.item-block .item-inner {
     padding: 0% !important;
 }
+
