--- a/src/components/alta-mesa/alta-mesa.html
+++ b/src/components/alta-mesa/alta-mesa.html
@@ -8,7 +8,7 @@
     <ion-list>
       <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
         <ion-label class="titulo" style="color: white;" fixed>Numero</ion-label>
-        <ion-input class="titulo" style="color: white;" type="number" [formControl]="numero" required name="numero">
+        <ion-input class="titulo" style="color: white;" type="number" [formControl]="numero" required readonly name="numero">
         </ion-input>
       </ion-item>
       <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
