--- a/src/components/listapedidos/listapedidos.html
+++ b/src/components/listapedidos/listapedidos.html
@@ -6,12 +6,16 @@
      <!-- Fecha: {{ reserva.fecha }}
      Hora: {{ reserva.hora }} -->
         <br>
-       Mesa: {{ pedido.mesa }}
+       Mesa Nro.: {{ pedido.mesa }}
         <br>
-        Estado: {{pedido.estado}}
-        <br>
-        
+        <!-- El estado del pedido es: {{pedido.estado}}
+        <br> -->
+        <productos-en-pedido 
+          [idPedido]='pedido.id'
+          [arrayProductos]='pedido.productos'
+          ></productos-en-pedido>
+<!--         
         <button  ion-button style="background-color: green" (click)="VerProductos()" >Ver Productos</button>
-        <button  ion-button style="background-color:rgb(233, 53, 33)" (click)="ComenzarPedido()">Comenzar</button>
-      </ion-card>
+        <button  ion-button style="background-color:rgb(233, 53, 33)" (click)="ComenzarPedido()">Comenzar</button> -->
+  </ion-card>
 </ion-list>
