Correccion en actualizacion de estado de productos

--- a/src/components/listapedidos/listapedidos.html
+++ b/src/components/listapedidos/listapedidos.html
@@ -11,8 +11,7 @@
         <!-- El estado del pedido es: {{pedido.estado}}
         <br> -->
         <productos-en-pedido 
-          [idPedido]='pedido.id'
-          [arrayProductos]='pedido.productos'
+          [pedido]='pedido'
           ></productos-en-pedido>
 <!--         
         <button  ion-button style="background-color: green" (click)="VerProductos()" >Ver Productos</button>
