Agregado de badges de estado para los productos.

--- a/src/components/productos-en-pedido/productos-en-pedido.html
+++ b/src/components/productos-en-pedido/productos-en-pedido.html
@@ -5,7 +5,12 @@
     <ion-card *ngFor="let producto of pedido.productos; let i = index" padding style="background-color: rgba(77, 76, 76, 0.589); color: white">
           Producto: {{producto.nombre}}
           <br>
-          Estado: {{producto.estado}}
+          <br>
+          <ion-badge *ngIf="producto.estado == 'pendiente'" class="pendiente">Estado: {{producto.estado}}</ion-badge>
+          <ion-badge *ngIf="producto.estado == 'preparacion'" class="preparacion">Estado: {{producto.estado}}</ion-badge>
+          <ion-badge *ngIf="producto.estado == 'terminado'" class="terminado">Estado: {{producto.estado}}</ion-badge>
+          <br>
+          <br>
           <button  *ngIf="producto.estado == 'pendiente' && producto.estado !== 'terminado'" ion-button style="background-color:rgb(233, 53, 33)" (click)="CambiarEstado(i, 'preparacion')">Comenzar</button>
           <button  *ngIf="producto.estado == 'preparacion' && producto.estado !== 'terminado'" ion-button style="background-color:rgb(33, 233, 66)" (click)="CambiarEstado(i, 'terminado')">Terminado</button>
     </ion-card>
