--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,9 +17,12 @@
 
 
 .alert-wrapper{
-    background-color: rgba(131, 131, 131, 1) !important;
+    background-color: rgba(200, 200, 200, 1) !important;
     border-radius: 20px !important;
     box-shadow: 10px 10px 10px black !important;
+    border-color: gray;
+    border-style: double;
+    border-width: 5px;
 }
 
 .toastPedido{
