--- a/src/components/productos-en-pedido/productos-en-pedido.html
+++ b/src/components/productos-en-pedido/productos-en-pedido.html
@@ -1,11 +1,8 @@
 <!-- Generated template for the ProductosEnPedidoComponent component -->
 <div>
-  <!-- Id de pedido en productos-en-pedido: {{idPedido}} -->
   <ion-list>
     <ion-card *ngFor="let producto of productosFiltrados; let i = index;" padding style="background-color: rgba(77, 76, 76, 0.589); color: white">         
-      <!-- <ng-container *ngIf="producto.tipo == 'bebida'"> -->
           Producto: {{producto.nombre}}
-          Producto id: {{producto.id}}
           <br>
           <br>
           <ion-badge *ngIf="producto.estado == 'pendiente'" class="pendiente">Estado: {{producto.estado}}</ion-badge>
@@ -13,9 +10,15 @@
           <ion-badge *ngIf="producto.estado == 'terminado'" class="terminado">Estado: {{producto.estado}}</ion-badge>
           <br>
           <br>
-          <button  *ngIf="producto.estado == 'pendiente' && producto.estado !== 'terminado'" ion-button style="background-color:rgb(233, 53, 33)" (click)="CambiarEstado(producto.id, 'preparacion')">Comenzar</button>
-          <button  *ngIf="producto.estado == 'preparacion' && producto.estado !== 'terminado'" ion-button style="background-color:rgb(33, 233, 66)" (click)="CambiarEstado(producto.id, 'terminado')">Terminado</button>
-      <!-- </ng-container> -->
+          <button  *ngIf="producto.estado == 'pendiente' && 
+                          producto.estado !== 'terminado'&&
+                          !esCliente" 
+                    
+                          ion-button style="background-color:rgb(233, 53, 33)" (click)="CambiarEstado(producto.id, 'preparacion')">Comenzar</button>
+          <button  *ngIf="producto.estado == 'preparacion' && 
+                          producto.estado !== 'terminado' &&
+                          !esCliente" 
+                          ion-button style="background-color:rgb(33, 233, 66)" (click)="CambiarEstado(producto.id, 'terminado')">Terminado</button>
     </ion-card>
   </ion-list>
 
