Cambios en juegos

--- a/src/pages/pages-juegos/pages-juegos-menu/pages-juegos-menu.scss
+++ b/src/pages/pages-juegos/pages-juegos-menu/pages-juegos-menu.scss
@@ -12,4 +12,51 @@ pages-juegos-menu{
         background-color: black;
         border-radius: 10%;
     }
+
+    H2{
+        color: #777777;
+    }
+     
+    .panel-juego{
+        margin-bottom: 25px;
+    }
+     
+    .palabra{
+     
+    }
+     
+    .letras{
+     
+    }
+     
+    .acierto{
+        color:#32db64!important;
+    }
+     
+    // Mensages TOAST
+    .toast-success{
+      > div{
+           background-color:#32db64!important;
+       }
+    }
+    .toast-danger{
+      > div{
+           background-color:#f53d3d!important;
+       }
+    }
+    .toast-warning{
+      > div{
+           background-color:#f2cd3c!important;
+       }
+    }
+     
+    #palabraSolucion{
+        text-transform: uppercase;
+    }
+
+
+
+
+
+
 }
