--- a/src/components/estado-pedido/estado-pedido.html
+++ b/src/components/estado-pedido/estado-pedido.html
@@ -9,7 +9,9 @@
    <productos-en-pedido 
      [pedido]='pedido'
    ></productos-en-pedido>
-<!--         
-   <button  ion-button style="background-color: green" (click)="VerProductos()" >Ver Productos</button>
-   <button  ion-button style="background-color:rgb(233, 53, 33)" (click)="ComenzarPedido()">Comenzar</button> -->
+          
+  <button  *ngIf="pedido.estado == 'entregado'" ion-button style="background-color: green" (click)="ConfirmarEntrega()">Recibido</button>
+  <button *ngIf="pedido.estado == 'recibido' && pedido.estado !== 'pagado'" ion-button style="background-color:rgb(233, 53, 33)" (click)="IndicarPropina()">Grado de Satisfacción</button> 
+  <button *ngIf="pedido.estado == 'recibido' && pedido.estado !== 'solicita_cuenta'" ion-button style="background-color:rgb(233, 53, 33)" (click)="SolicitarCuenta()">Solicitar La Cuenta</button> 
+
 </ion-card>
