--- a/src/components/estado-pedido/estado-pedido.html
+++ b/src/components/estado-pedido/estado-pedido.html
@@ -1,25 +1,26 @@
 
 <ion-card padding style="background-color: rgba(77, 76, 76, 0.589); color: white">
-  Usted se encuentra en la Mesa Nro.: {{ pedido.mesa }}   
-  Muchas gracias por su pedido!
-  <br>
-  Estado: 
+  <span *ngIf="pedido.estado !== 'pagado'" >Mesa Nro.: {{ pedido.mesa }}</span><br><br> 
+  <span *ngIf="pedido.estado !== 'pagado'"> Gracias por su pedido! </span><br><br> 
 
-    <ion-badge *ngIf="pedido.estado == 'solicitado'" class="pendiente">Ya confirmamos tu pedido</ion-badge>
-    <ion-badge *ngIf="pedido.estado == 'pendiente'" class="pendiente">Pedido Confirmado</ion-badge>  
-    <ion-badge *ngIf="pedido.estado == 'proceso'" class="preparacion">Lo estamos preparando</ion-badge>
-    <ion-badge *ngIf="pedido.estado == 'terminado'" class="terminado">Ya casi lo tenes</ion-badge>
-    <ion-badge *ngIf="pedido.estado == 'entregado'" class="terminado">Buen Provecho!</ion-badge>
-    <ion-badge *ngIf="pedido.estado == 'solicita_cuenta'" class="terminado">Ya te indicamos el importe!</ion-badge>
-    <ion-badge *ngIf="pedido.estado == 'pagado'" class="terminado">Muchas gracias por elegirnos!</ion-badge>
+  <span *ngIf="pedido.estado !== 'pagado'">Estado:</span>
+    <ion-badge *ngIf="pedido.estado == 'solicitado'" class="pendiente">A CONFIRMAR</ion-badge>
+    <ion-badge *ngIf="pedido.estado == 'pendiente'" class="pendiente">PEDIDO CONFIRMADO</ion-badge>  
+    <ion-badge *ngIf="pedido.estado == 'proceso'" class="preparacion">LO ESTAMOS PREPARANDO</ion-badge>
+    <ion-badge *ngIf="pedido.estado == 'terminado'" class="terminado">YA CASI LO TENES</ion-badge>
+    <ion-badge *ngIf="pedido.estado == 'entregado'" class="terminado">BUEN PROVECHO</ion-badge>
+    <ion-badge *ngIf="pedido.estado == 'solicita_cuenta'" class="terminado">LA CUENTA ESTA EN CAMINO</ion-badge>
+    <ion-badge *ngIf="pedido.estado == 'pagado'" class="terminado">MUCHAS GRACIAS!</ion-badge>
 
-  <br>  
+  <br><br> 
    <!-- <productos-en-pedido 
      [pedido]='pedido'
    ></productos-en-pedido> -->
           
   <button  *ngIf="pedido.estado == 'entregado'" ion-button style="background-color: green" (click)="ConfirmarEntrega()">Recibido</button>
+  <br>
   <button *ngIf="pedido.estado == 'recibido' && pedido.estado !== 'pagado' && pedido.propina == 0" ion-button style="background-color: green" (click)="IndicarPropina()">Grado de Satisfacción</button> 
+  <br>
   <button *ngIf="pedido.estado == 'recibido' && pedido.estado !== 'solicita_cuenta'" ion-button style="background-color: green" (click)="SolicitarCuenta()">Solicitar La Cuenta</button> 
    
 
