--- a/src/components/listapedidos/listapedidos.html
+++ b/src/components/listapedidos/listapedidos.html
@@ -1,16 +1,17 @@
 <!-- Generated template for the ListapedidosComponent component -->
 <ion-list>
   <ion-card *ngFor="let pedido of pedidos" padding style="background-color: rgba(77, 76, 76, 0.589); color: white">
-  
-       Mesa Nro.: {{ pedido.mesa }}
+
+       <span *ngIf="!filtroDelivery"> Nro.: {{ pedido.mesa }} </span>
         <br>
         <!-- El estado del pedido es: {{pedido.estado}}
         <br> -->
-        <productos-en-pedido 
+        <productos-en-pedido *ngIf="!filtroDelivery"
           [pedido]='pedido'
         ></productos-en-pedido>
-<!--         
-        <button  ion-button style="background-color: green" (click)="VerProductos()" >Ver Productos</button>
-        <button  ion-button style="background-color:rgb(233, 53, 33)" (click)="ComenzarPedido()">Comenzar</button> -->
+        
+        <button *ngIf="filtroDelivery && pedido.estado == 'terminado'" ion-button style="background-color: green" (click)="RetirarEntrega(pedido)" >Retirar para entrega</button>
+        <button *ngIf="filtroDelivery && pedido.estado == 'en_camino'" ion-button style="background-color:rgb(233, 53, 33)" (click)="Entregar(pedido)">Entregar</button>
+        <button *ngIf="filtroDelivery && pedido.estado == 'recibido'" ion-button style="background-color:rgb(233, 53, 33)" (click)="Cobrar(pedido)">Cobrar</button>  
   </ion-card>
 </ion-list>
