--- a/src/components/productos-en-pedido/productos-en-pedido.html
+++ b/src/components/productos-en-pedido/productos-en-pedido.html
@@ -4,6 +4,7 @@
     <ion-card *ngFor="let producto of productosFiltrados; let i = index;" padding style="background-color: rgba(77, 76, 76, 0.589); color: white">         
           Producto: {{producto.nombre}}
           <br>
+          Cantidad: {{producto.cantidad}}
           <br>
           <ion-badge *ngIf="producto.estado == 'pendiente'" class="pendiente">Pendiente</ion-badge>
           <ion-badge *ngIf="producto.estado == 'preparacion'" class="preparacion">En preparacion</ion-badge>
