--- a/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.scss
+++ b/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.scss
@@ -1,3 +1,26 @@
+.range-md.range-has-pin {
+  padding: 0%;
+}
+
+ion-range {
+  display: block;
+}
+
+ion-label {
+  color: gray;
+}
+
+.select-md {
+  min-width: 100%;
+}
+
+.backgroundCard_graph{
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 20px;
+  display: none;
+}
+
+
 .bartenderMenu {
   position: absolute;
   background: url('../assets/img/restaurantWallpaper.jpg') no-repeat transparent !important; //bg.png
@@ -355,6 +378,26 @@ page-pages-dueno {
       text-shadow: none;
     }
 
+    .range-md.range-has-pin {
+      padding: 0%;
+  }
 
+  ion-range {
+      display: block;
+  }
+
+  ion-label {
+      color: gray;
+  }
+
+  .select-md {
+      min-width: 100%;
+  }
+
+  .backgroundCard_graph{
+      background-color: rgba(255,255,255,0.5);
+      border-radius: 20px;
+      display: none;
+  }
 
 }
